networking/k3s/routes.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-admin
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`<proxy_url>`)
      kind: Rule
      services:
        - name: traefik
          port: 8080
  tls:
    certResolver: tlsresolver
